# lathe

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
crates/lathe-cli/: Cargo.toml
crates/lathe-cli/src/: example.rs  main.rs  run.rs  server.rs
crates/lathe-core/: Cargo.toml
crates/lathe-core/src/: executor.rs  graph.rs  lib.rs  provider.rs  registry.rs  state.rs  template.rs  yaml.rs
crates/lathe-core/src/graph/: mod.rs  port.rs
crates/lathe-core/src/node_defs/: llm.rs  mod.rs
crates/lathe-core/src/nodes/: end.rs  llm.rs  mod.rs  start.rs
crates/lathe-core/src/tool_defs/: http_request.rs  mod.rs
crates/lathe-core/src/tools/: http.rs
crates/lathe-server/: Cargo.toml
crates/lathe-server/src/: handlers.rs  lib.rs  state.rs
examples/: explainer_agent.yaml  simple_agent.yaml  simple_lathe_graph.yaml
