[package]
name = "lathe-cli"
version = "0.1.1"
edition = "2024"
description = "Command-line interface for defining and running Lathe AI agent pipelines"
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "../../README.md"

[[bin]]
name = "lathe"
path = "src/main.rs"

[dependencies]
lathe-core = {path = "../lathe-core", version = "0.1.0"}
lathe-server = {path = "../lathe-server", version = "0.1.0"}
tokio = {workspace = true}
anyhow = {workspace = true}
clap = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
serde_json = {workspace = true}

[dev-dependencies]
uuid = {workspace = true}
