[package]
name = "lathe-core"
version = "0.1.0"
edition = "2024"

[dependencies]
petgraph = {workspace = true}
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
serde_yaml  = { workspace = true }
anyhow      = { workspace = true }
uuid        = { workspace = true }
async-trait = { workspace = true }
rig-core = {workspace = true}
futures = {workspace = true}
tracing = {workspace = true}