[package]
name = "lathe-core"
version = "0.1.1"
edition = "2024"
description = "Core graph, executor, and node types for building YAML-defined AI agent pipelines"
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "../../README.md"

[dependencies]
petgraph = {workspace = true}
serde       = { workspace = true }
serde_json  = { workspace = true }
serde_yaml  = { workspace = true }
anyhow      = { workspace = true }
uuid        = { workspace = true }
async-trait = { workspace = true }
rig-core = {workspace = true}
futures = {workspace = true}
tracing = {workspace = true}
clap = {workspace = true}

[dev-dependencies]
tokio = {workspace = true}