[package]
name = "lathe-server"
version = "0.1.0"
edition = "2024"
description = "Axum HTTP server for exposing Lathe AI agent pipelines as an API"
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "../../README.md"

[dependencies]
axum = "0.8.9"
lathe-core = {path = "../lathe-core", version = "0.1.0"}
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }